--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,15 +3,19 @@ name: Build
 on: push
 
 jobs:
-  todos_linux:
+  todos_linux_musl:
     runs-on: ubuntu-latest
     steps:
     - name: Install musl-tools
       run: |
         sudo apt-get install musl-tools
-    - uses: hecrj/setup-rust-action@v1
+    - name: Install Rust stable and musl target
+      uses: actions-rs/toolchain@v1
       with:
+        profile: minimal
+        toolchain: stable
         target: x86_64-unknown-linux-musl
+        override: true
     - name: Install cargo-deb
       run: cargo install cargo-deb
     - uses: actions/checkout@master
@@ -41,6 +45,39 @@ jobs:
       with:
         name: todos-x86_64-debian-linux-musl
         path: target/x86_64-unknown-linux-musl/debian/iced_todos-x86_64-debian-linux-musl.deb
+
+  todos_linux:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: hecrj/setup-rust-action@v1
+    - name: Install cargo-deb
+      run: cargo install cargo-deb
+    - uses: actions/checkout@master
+    - name: Install dependencies
+      run: |
+        export DEBIAN_FRONTED=noninteractive
+        sudo apt-get -qq update
+        sudo apt-get install -y libxkbcommon-dev
+    - name: Enable Link Time Optimizations
+      run: |
+        echo "[profile.release]" >> Cargo.toml
+        echo "lto = true" >> Cargo.toml
+    - name: Build todos binary
+      run: cargo build --verbose --release --package todos
+    - name: Archive todos binary
+      uses: actions/upload-artifact@v1
+      with:
+        name: todos-x86_64-unknown-linux-gnu
+        path: target/release/todos
+    - name: Pack todos .deb package
+      run: cargo deb --no-build --package todos
+    - name: Rename todos .deb package
+      run: mv target/debian/*.deb target/debian/iced_todos-x86_64-debian-linux-gnu.deb
+    - name: Archive todos .deb package
+      uses: actions/upload-artifact@v1
+      with:
+        name: todos-x86_64-debian-linux-gnu
+        path: target/debian/iced_todos-x86_64-debian-linux-gnu.deb
 
   todos_windows:
     runs-on: windows-latest
