--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         echo "[profile.release]" >> Cargo.toml
         echo "lto = true" >> Cargo.toml
     - name: Build todos binary
-      run: cargo build --target x86_64-unknown-linux-musl --verbose --release --package todos
+      run: env CXX=g++ PKG_CONFIG_ALLOW_CROSS=1 cargo build --target x86_64-unknown-linux-musl --verbose --release --package todos
     - name: Archive todos binary
       uses: actions/upload-artifact@v1
       with:
